tests/frontend/fail/array/inconsistent_array_type.act
contract B

constructor
interface constructor()

creates

  bool[3] b := [1, 2, false]
